--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,9 @@
   <head>
   </head>
   <body>
+  <h1 style=" text-align: center;" >Image Classification webapp on Kubernetes </h1>
     <div class="content">
-      <h1>Upload your files to the Cloud Storage</h1>
+      <h2 >Upload image to check if person is smoking or not</h2>
       <div>
         <h3>Upload your file here:</h3>
         <form method="POST" action="/upload" enctype="multipart/form-data">
@@ -14,4 +15,6 @@
       </div>
     </div>
   </body>
-</html>
+</html> 
+
+
